2017-02-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Avoid unnecessary duplication of configuration files.

	* Makefile.in (vpath install-sh): Define it; it matches...
	(vpath %.m4): ...this; add $top_srcdir/..; search it first; delete
	rule for creating duplicate file reference links in $top_srcdir.
	(configure): Add '-I ..' option, when running autoconf.
	(w32api-srcdist-files): Rename it as...
	(w32api-srcdist-package-files): ...this; remove dependencies on...
	(aclocal.m4 VERSION.m4 install-sh): ...these; reinstate them in...
	(w32api-srcdist-config-files): ...this new distributable files
	enumeration goal; add it as one new prerequisite of...
	(w32api-srcdist-files): ...this repurposed goal; also depends on...
	(w32api-srcdist-package-files): ...this; populate it using...
	(SRCDIST_ADD): ...this macro; redefine it accordingly.

2016-12-08  Jerzy Tarasiuk  <jz_fuw@users.sourceforge.net>

	Correct typo in <ddk/ntdddisk.h>; fix bug [#2323]

	* include/ddk/ntdddisk.h (IOCTL_DISK_BASE): Correct definition;
	it was previously transcribed incorrectly, as being equivalent to...
	(FILE_TYPE_DISK): ...this, but it should have been equivalent to...
	(FILE_DEVICE_DISK): ...this.

2016-12-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rationalize <winuser.h> ANSI vs. UNICODE definition strategy.

	* include/winuser.h [UNICODE, !UNICODE]: Replace individual pairs of
	alternative generic symbol mapping definitions, and typedefs, with...
	(__AW_SUFFIXED__): ...one such macro expansion per pair; collate with
	their respective ANSI and UNICODE specific references.

2016-11-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Deprecate obsolete <winable.h> and <pbt.h> headers.

	* Makefile.in (%.h.in): Generalize vpath definition.
	(obsolete_headers, obsolete_header_script, w32api_dist_headers)
	(w32api_generated_headers, replace_headers, macro_name): New macros.
	(install-w32api-headers): Add dependency on w32api_dist_headers.